--- a/src/css/body.scss
+++ b/src/css/body.scss
@@ -1,12 +1,4 @@
-$mainColor:#0060FF;
-/////////////// Selectors
 
-
-///colors
-/// 
-.color-blue-main{
-    color: #0060FF;
-}
 
 ////////////// classess
 .firstSection {
@@ -104,3 +96,64 @@ $mainColor:#0060FF;
     to{transform: translateY(40%);}
 }
 
+
+.forthsection{
+    min-height: 700px;
+    background-image: url('../img/3.webp');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.glass-papper{
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    position: absolute;
+    background-color: rgb(0 2 74 / 81%);
+}
+
+
+
+.dropdown-wrapper{
+    >div{
+        border-radius:4px 4px 0 0 ;
+        margin: 10px 0 0;
+        font-weight: bold;
+        cursor: pointer;
+    }
+    p{
+        border-radius: 0 0 10px 10px;
+        transition: .8s cubic-bezier(0.29, 0.05, 0.39, 1.01);
+        max-height: 0;
+        overflow-y: hidden;
+        padding: 0 20px;
+    }
+}
+
+
+.question-img{
+    position: relative;
+    top:70px;
+    left: 40px;
+    animation-name: question;
+    animation-name: downup;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+    display: flex;
+    transform: translateY(0);
+}
+
+@keyframes question {
+    from{transform: translateY(0);}
+    to{transform: translateY(40%);}
+}
+
+
+.list-on{
+    list-style: disc;
+    color: #0060FF;
+
+}
