--- a/src/css/master.css
+++ b/src/css/master.css
@@ -223,8 +223,24 @@ figure {
   color: #616161;
 }
 
+.color-blue-main {
+  color: #0060FF;
+}
+
+.bg-light-white {
+  background-color: #f4f8ff;
+}
+
 .bg-blue-main {
   background-color: #0060FF;
+}
+
+.bg-blue-glass {
+  background-color: rgba(3, 11, 24, 0.6);
+}
+
+.h-270-p {
+  height: 270px;
 }
 
 .h-50-p {
@@ -235,6 +251,10 @@ figure {
   width: 50px;
 }
 
+.w-270-p {
+  width: 270px;
+}
+
 .mw-570 {
   max-width: 570px;
 }
@@ -243,6 +263,14 @@ figure {
   max-width: 500px;
 }
 
+.mw-400 {
+  max-width: 400px;
+}
+
 .bdrs-one-way {
   border-radius: 50% 0 50% 50%;
+}
+
+.z-index-1 {
+  z-index: 1;
 }/*# sourceMappingURL=master.css.map */
