--- a/src/css/body.scss
+++ b/src/css/body.scss
@@ -1,5 +1,3 @@
-
-
 ////////////// classess
 .firstSection {
     background-image: url(../img/top-page-bg.webp);
@@ -10,43 +8,48 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
-    h1{
+
+    h1 {
         color: white;
         font-size: 60px;
         font-weight: 900;
     }
-    p{
+
+    p {
         color: white;
     }
-    
+
 }
 
 .mask-third,
 .mask-seccond,
-.mask-first{
+.mask-first {
     mask-repeat: no-repeat;
     -webkit-mask-size: contain;
     mask-size: 100% 100%;
     mask-position: center;
-    >img{
+
+    >img {
         transition: .4s;
-        &:hover{
+
+        &:hover {
             transform: scale(1.08);
         }
     }
 }
-.mask-first{
+
+.mask-first {
     mask-image: url('../img/humans3.webp');
 }
 
-.mask-seccond{
+.mask-seccond {
     mask-image: url('../img/halfCircle5.webp');
 }
 
-.mask-third{
+.mask-third {
     mask-image: url('../img/human4.webp');
-    &::after{
+
+    &::after {
         content: "";
         position: absolute;
         left: 50%;
@@ -61,7 +64,7 @@
     }
 }
 
-.up-down-anim{
+.up-down-anim {
     position: relative;
     top: 50px;
     animation-name: updown;
@@ -74,11 +77,16 @@
 }
 
 @keyframes updown {
-    from{transform: translateY(0);}
-    to{transform: translateY(40%);}
+    from {
+        transform: translateY(0);
+    }
+
+    to {
+        transform: translateY(40%);
+    }
 }
 
-.down-up-anim{
+.down-up-anim {
     position: absolute;
     bottom: 0;
     right: 0;
@@ -92,19 +100,24 @@
 }
 
 @keyframes downup {
-    from{transform: translateY(0);}
-    to{transform: translateY(40%);}
+    from {
+        transform: translateY(0);
+    }
+
+    to {
+        transform: translateY(40%);
+    }
 }
 
 
-.forthsection{
+.forthsection {
     min-height: 700px;
     background-image: url('../img/3.webp');
     background-size: cover;
     background-repeat: no-repeat;
 }
 
-.glass-papper{
+.glass-papper {
     width: 100%;
     height: 100%;
     left: 0;
@@ -115,26 +128,29 @@
 
 
 
-.dropdown-wrapper{
-    >div{
-        border-radius:4px 4px 0 0 ;
-        margin: 10px 0 0;
-        font-weight: bold;
-        cursor: pointer;
+.dropdown-wrapper {
+    >div {
+            border-radius: 4px 4px 0 0;
+            margin: 10px 0 0;
+            font-weight: bold;
+            cursor: pointer;
+    
     }
-    p{
+
+    p {
         border-radius: 0 0 10px 10px;
-        transition: .8s cubic-bezier(0.29, 0.05, 0.39, 1.01);
+        transition: 400ms;
         max-height: 0;
         overflow-y: hidden;
-        padding: 0 20px;
+        padding: 0 20px 20px;
+        opacity: 0;
     }
 }
 
 
-.question-img{
+.question-img {
     position: relative;
-    top:70px;
+    top: 70px;
     left: 40px;
     animation-name: question;
     animation-name: downup;
@@ -142,17 +158,22 @@
     animation-timing-function: ease-in-out;
     animation-direction: alternate;
     animation-iteration-count: infinite;
-    display: flex;
+    display: inline-block;
     transform: translateY(0);
 }
 
 @keyframes question {
-    from{transform: translateY(0);}
-    to{transform: translateY(40%);}
+    from {
+        transform: translateY(0);
+    }
+
+    to {
+        transform: translateY(40%);
+    }
 }
 
 
-.list-on{
+.list-on {
     list-style: disc;
     color: #0060FF;
 
