--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,4 +7,44 @@
   padding: 0 10px;
   font-weight: 500;
   font-size: 18px;
+}
+
+.ham-menu {
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 12;
+  background-color: rgb(42, 42, 42);
+  transform: translateX(-100%);
+  transition: 1s;
+}
+.ham-menu > div {
+  font-size: 60px;
+}
+.ham-menu a {
+  color: white;
+  padding: 40px 20px;
+  font-size: 60px;
+}
+.ham-menu ul li {
+  text-align: center;
+  transform: translateX(-200%);
+}
+.ham-menu ul li:nth-of-type(1) {
+  transition: 500ms 500ms;
+}
+.ham-menu ul li:nth-of-type(2) {
+  transition: 500ms 800ms;
+}
+.ham-menu ul li:nth-of-type(3) {
+  transition: 500ms 1.2s;
+}
+.ham-menu ul li:nth-of-type(4) {
+  transition: 500ms 1.5s;
+}
+.ham-menu ul li:nth-of-type(5) {
+  transition: 500ms 1.8;
 }/*# sourceMappingURL=header.css.map */
