--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -5,9 +5,9 @@
     }
 }
 
-.menu{
-    li{
-        a{
+.menu {
+    li {
+        a {
             color: rgb(19, 19, 19);
             padding: 0 10px;
             font-weight: 500;
@@ -16,3 +16,45 @@
     }
 }
 
+
+.ham-menu {
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 12;
+    background-color: rgb(42, 42, 42);
+    transform: translateX(-100%);
+    transition: 1s;
+    >div{
+        font-size: 60px;
+    }
+    a {
+        color: white;
+        padding:40px 20px;
+        font-size: 60px;
+    }
+    ul{
+        li{
+            text-align: center;
+            transform: translateX(-200%);
+            &:nth-of-type(1){
+                transition:500ms 500ms;
+            }
+            &:nth-of-type(2){
+                transition: 500ms 800ms;
+            }
+            &:nth-of-type(3){
+                transition: 500ms 1.2s;
+            }
+            &:nth-of-type(4){
+                transition: 500ms 1.5s;
+            }
+            &:nth-of-type(5){
+                transition: 500ms 1.8;
+            }
+        }
+    }
+}
